--- a/sections/sample-scan.liquid
+++ b/sections/sample-scan.liquid
@@ -24,7 +24,7 @@
   }
 
   .swiper-{{ section.id }} {
-    overflow: hidden;
+    overflow: visible!important;
     width: 100%;
   }
 
@@ -43,7 +43,7 @@
 
   .image-container-{{ section.id }} {
     width: 100%;
-    height: 100%;
+    height:650px;
   }
 
   .image-container-{{ section.id }}
@@ -367,7 +367,8 @@
     spaceBetween: 128,
     loop: true,
     autoplay: true,
-    delay: 3000,
+    initialSlide: 1,
+    delay: 5000,
     navigation: {
       nextEl: "#next-slide",
       prevEl: "#prev-slide",
