--- a/sections/sample-scan.liquid
+++ b/sections/sample-scan.liquid
@@ -24,13 +24,14 @@
   }
 
   .swiper-{{ section.id }} {
-    overflow: visible!important;
+    overflow: visible !important;
     width: 100%;
   }
 
   .swiper-slide.swiper-slide-{{ section.id }} {
     justify-content: center;
-    display:flex
+    display: flex;
+    flex-direction: column;
   }
 
   .swiper-{{ section.id }}
@@ -49,13 +50,13 @@
   .image-container-{{ section.id }} {
     width: 100%;
     height: 100%;
-    max-height:650px;
+    max-height: 650px;
   }
 
   .image-container-{{ section.id }}
   img {
     object-fit: contain;
-    max-height:650px
+    max-height: 650px
   }
 
 
@@ -66,8 +67,8 @@
     }
 
     .image-container-{{ section.id }} {
-    max-width: 65vw;
-  }
+      max-width: 65vw;
+    }
 
     .sample-height {
       max-height: {{ section.settings.content_height }}px
@@ -174,7 +175,7 @@
                 <div class="scan-info-block tw-opacity-100 hover:tw-opacity-0 tw-transition-opacity tw-duration-300 tw-z-10 tw-hidden tw-text-white md:tw-flex tw-flex-col tw-gap-2 tw-absolute tw-left-4 tw-top-4 tw-bg-black/40 tw-backdrop-blur-md tw-p-6">
                   {% if block.settings.camera != blank %}
                     <div class="tw-flex tw-flex-col tw-gap-1">
-                      <span class="tw-uppercase tw-text-xs tw-font-bold">Scanning camera</span>
+                      <span class="tw-uppercase tw-text-xs tw-font-bold">Scanned with</span>
                       <span>{{ block.settings.camera }}</span>
                     </div>
                   {% endif %}
@@ -200,6 +201,18 @@
                     <div class="tw-flex tw-flex-col tw-gap-1">
                       <span class="tw-uppercase tw-text-xs tw-font-bold">Film stock</span>
                       <span>{{ block.settings.film_stock }}</span>
+                    </div>
+                  {% endif %}
+                  {% if block.settings.shot_on != blank %}
+                    <div class="tw-flex tw-flex-col tw-gap-1">
+                      <span class="tw-uppercase tw-text-xs tw-font-bold">Shot on</span>
+                      <span>{{ block.settings.shot_on }}</span>
+                    </div>
+                  {% endif %}
+                  {% if block.settings.film_format != blank %}
+                    <div class="tw-flex tw-flex-col tw-gap-1">
+                      <span class="tw-uppercase tw-text-xs tw-font-bold">Film format</span>
+                      <span>{{ block.settings.film_format }}</span>
                     </div>
                   {% endif %}
 
@@ -373,7 +386,7 @@
     slidesPerView: 1,
     spaceBetween: 128,
     loop: true,
-    // autoplay: true,
+    autoplay: true,
     initialSlide: 1,
     delay: 5000,
     navigation: {
@@ -576,6 +589,16 @@
             "type": "text",
             "id": "film_stock",
             "label": "Film stock"
+          },
+          {
+            "type": "text",
+            "id": "shot_on",
+            "label": "Shot on"
+          },
+          {
+            "type": "text",
+            "id": "film_format",
+            "label": "Film format"
           },
           {
             "type": "url",
