--- a/assets/app.css
+++ b/assets/app.css
@@ -2743,6 +2743,85 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.sdd-download {
+  display: flex!important;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: start!important;
+  text-align: left!important;
+  max-width: 400px!important;
+  margin: 0!important;
+  padding:2rem!important;
+  width: 100%!important;
+}
+
+#digital-downloads-proxy {
+  max-width: var(--page-width)!important;
+  margin: 0 auto!important;
+  display: grid!important;
+  place-items: center!important;
+  padding: 0!important
+}
+
+.sdd-download-image {
+  max-width: unset!important;
+  max-height: unset!important;
+  aspect-ratio: 3/2;
+  -o-object-fit: cover;
+     object-fit: cover
+}
+
+.sdd-download::before {
+  content: "Download your files";
+  color: black;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.sdd-download-product {
+  font-size: 1.6rem!important;
+  display: flex!important;
+  flex-direction: column;
+  line-height: unset!important;
+}
+
+.sdd-download-product::before {
+  content: "Product: ";
+  font-weight: bold;
+}
+
+.sdd-download-file {
+  font-size: 1.4rem!important;
+  display: flex!important;
+  flex-direction: column;
+  line-height: unset!important;
+}
+
+.sdd-download-file::before {
+  content: "File name: ";
+  font-weight: bold;
+}
+
+.sdd-download button {
+  background-color: black!important;
+  font-size: 1.4rem!important;
+  width: -webkit-fit-content!important;
+  width: -moz-fit-content!important;
+  width: fit-content!important;
+  color:white!important;
+  padding: 1rem 2rem !important;
+}
+
+@media screen and (min-width:768px) {
+  .sdd-download {
+    border: 1px solid rgba(0,0,0);
+  }
+
+  #digital-downloads-proxy {
+    padding: 72px!important
+  }
+}
+
 .shopify-policy__container {
   padding-top: 72px;
   padding-bottom: 72px;
